--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -229,7 +229,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/multiplePriceProductsCheck">
@@ -545,7 +545,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:text="Borrar todos los campos al guardar"
+            android:text="Reiniciar los campos al guardar"
             app:layout_constraintBottom_toTopOf="@+id/btnCancelProduct"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
