--- a/app/src/main/res/layout/fragment_sell_product.xml
+++ b/app/src/main/res/layout/fragment_sell_product.xml
@@ -28,9 +28,9 @@
         app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
 
     <TextView
-        android:layout_width="54dp"
-        android:layout_height="15dp"
-        android:text="Siguiente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Metodos de pago"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
@@ -44,13 +44,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
 
-<!--    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_baseline_arrow_left_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />-->
+    <!--    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_baseline_arrow_left_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/bottomGuideline"
