--- a/app/src/main/res/layout/fragment_finalsell_details.xml
+++ b/app/src/main/res/layout/fragment_finalsell_details.xml
@@ -1,19 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#C84949"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#C84949">
+
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TERCER FRAGMENT"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Descuento"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/percentDiscount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Porcentual"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/fixDiscount"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+
+    <EditText
+        android:id="@+id/fixDiscount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Fijo"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="@+id/percentDiscount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/percentDiscount"
+        app:layout_constraintTop_toTopOf="@+id/percentDiscount" />
+
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Comprobantes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/percentDiscount" />
+
+
+    <EditText
+        android:id="@+id/orderObservations"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Observaciones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orderRemito" />
+
+    <EditText
+        android:id="@+id/orderRemito"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Remito"
+        app:layout_constraintEnd_toStartOf="@+id/orderBill"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+
+    <EditText
+        android:id="@+id/orderBill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Factura"
+        app:layout_constraintBottom_toBottomOf="@+id/orderRemito"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/orderRemito"
+        app:layout_constraintTop_toTopOf="@+id/orderRemito" />
+
+    <CheckBox
+        android:id="@+id/chkSendPdfToPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Enviar comprobante"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orderObservations" />
+
+    <CheckBox
+        android:id="@+id/chkCreatePdf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Generar PDF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/chkSendPdfToPhone"
+        app:layout_constraintTop_toTopOf="@+id/chkSendPdfToPhone" />
+
+    <EditText
+        android:id="@+id/editPhone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Telefono"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chkSendPdfToPhone" />
+
+
+    <Button
+        android:id="@+id/closeOrderBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Cerrar venta "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editPhone" />
+
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -22,20 +129,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_baseline_arrow_right_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
+
 
     <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:src="@drawable/ic_baseline_arrow_left_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Metodos de pago"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="@+id/bottomGuideline" />
 
     <androidx.constraintlayout.widget.Guideline
