--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -4,3 +4,12 @@
         name="my_images"
         path="Android/data/com.example.easystock/files/Pictures" />
 </paths>
+
+<!--ORIGINAL-->
+<!--
+    <?xml version="1.0" encoding="utf-8"?>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-path
+        name="my_images"
+        path="Android/data/com.example.easystock/files/Pictures" />
+</paths>-->
